# serializer version: 1
# name: test_nonreserved_keyword_ok[select_kw_date_alias]
  '''
  SELECT abc date
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	abc
          as_alias
            ident	date
      None
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_column]
  '''
  SELECT date abc
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	date
          as_alias
            ident	abc
      None
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_double]
  '''
  SELECT date date
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	date
          as_alias
            ident	date
      None
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_alias]
  '''
  SELECT abc format
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	abc
          as_alias
            ident	format
      None
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_column]
  '''
  SELECT format abc
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	format
          as_alias
            ident	abc
      None
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_alias]
  '''
  SELECT abc percent
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	abc
          as_alias
            ident	percent
      None
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_column]
  '''
  SELECT percent abc
  
  query_expr
    select
      None
      None
      select_list
        select_expr
          ident	percent
          as_alias
            ident	abc
      None
  '''
# ---
